fix DT-2300, add max-height to thumbnails in single product so they don't get cut off

--- a/less/ecom.less
+++ b/less/ecom.less
@@ -33,6 +33,12 @@
     .gallery-item {
          background-color: transparent;
     }
+    .image--thumb {
+        max-height: 80px;
+        @media @mobile {
+            max-height: 60px;
+        }
+    }
     .product-content {
         display: inline-block;
         width: 100%;
